--- a/app/src/main/res/layout/activity_play__quiz.xml
+++ b/app/src/main/res/layout/activity_play__quiz.xml
@@ -69,6 +69,15 @@
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"/>
 
+            <ImageView
+                android:id="@+id/imagem"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginLeft="30dp"
+                android:visibility="gone"
+                android:layout_marginTop="20dp"/>
+
             <Button
                 android:id="@+id/op1"
                 android:layout_width="match_parent"
