--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -12,6 +12,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:theme="@style/ToolbarColoredBackArrow"
         app:titleTextColor="@android:color/transparent"
         android:background="@android:color/transparent"/>
     <ScrollView
