--- a/app/src/main/res/layout/texto_introducao.xml
+++ b/app/src/main/res/layout/texto_introducao.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fundo"
+    android:background="#8FBC8F"
     android:orientation="vertical">
 
     <ImageView
@@ -17,15 +17,15 @@
         android:layout_height="350dp"
         android:baselineAligned="false"
         android:src="@drawable/app_propraganda"
-        android:layout_marginLeft="60dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="40dp"
         />
 
     <FrameLayout
-        android:layout_width="250dp"
+        android:layout_width="270dp"
         android:layout_height="180dp"
         android:background="@drawable/balao_fala"
-        android:layout_marginLeft="130dp"
+        android:layout_marginLeft="75dp"
         android:layout_marginTop="-400dp"
         >
         <TextView
@@ -57,7 +57,6 @@
             android:layout_height="50dp"
             android:layout_toRightOf="@id/texto"
             android:src="@drawable/seta"/>
-
     </RelativeLayout>
 
 </LinearLayout>
